# TCR_Vision

./: Readme.md
Fourpoint/: Readme.md
Fourpoint/FourPointV7/Tensorrt_inference/: trt_inference.py  trt_inferenceV2.py
Fourpoint/FourPoint_shangjiao/: CMakeLists.txt  main.cpp
Fourpoint/FourPoint_shangjiao/AutoShoot/TRT/: TRTModule.cpp  TRTModule.h
Fourpoint/FourPoint_tenorrtV5/: CMakeLists.txt  README.md  main.cpp
Fourpoint/FourPoint_tenorrtV5/AutoShoot/TRT/: TRTModule.cpp  TRTModule.h
tools/: Readme.md
tools/AutoChange/: CMakeLists.txt  README.md  Tool.h  main.cpp  mianwindow.cpp  mianwindow.h  mianwindow.ui  ui_mianwindow.h
tools/HaikangCamera/: CMakeLists.txt  README.md  main.cpp
tools/HaikangCamera/HaikangCamera/CameraGray/: HaiKangCameraGray.cpp  HaiKangCameraGray.h
tools/HaikangCamera/HaikangCamera/CameraRGB/: HaiKangCameraRGB.cpp  HaiKangCameraRGB.h
tools/HaikangCamera/yaml/: camera.yaml
use_for_RM/: Readme.md
use_for_RM/TCR-Vison_2021/: 1.txt  CMakeLists.txt  DebugParam.xml  README.md  main.cpp  serialport.cpp  socat.py
use_for_RM/TCR-Vison_2021/AngleSolver/: AngleSolver_2.cpp  Filter.cpp
use_for_RM/TCR-Vison_2021/Armor_recognition/: .ArmorBox.cpp.swp  ArmorBox.cpp  ArmorDetector.cpp  ArmorNumClassifier.cpp  LightBar.cpp  findLights.cpp  matchArmors.cpp
use_for_RM/TCR-Vison_2021/DaHengCamera/: DaHengCamera.cpp  DaHengCamera.h
use_for_RM/TCR-Vison_2021/DrawCurve/: DraCurve.cpp  DraCurve.h
use_for_RM/TCR-Vison_2021/Thread/: ImageProcess.cpp  RemoteController.cpp
use_for_RM/TCR-Vison_2021/buff_include/: BuffAngleSolver.h  FindBuff.h  predict.h
use_for_RM/TCR-Vison_2021/buff_src/: BuffAngleSolver.cpp  FindBuff.cpp
use_for_RM/TCR-Vison_2021/global/: serialport.cpp
use_for_RM/TCR-Vison_2021/header/: AngleSolver_2.h  Armor.h  Filter.h  General.h  ImageProcess.h  RemoteController.h  serialport.h
use_for_RM/TCR-Vison_2022/: CMakeLists.txt  Struct.h  main.cpp  matplotlibcpp.h
use_for_RM/TCR-Vison_2022/Analyze_data/: Analyze_Data.cpp  Analyze_Data.h
use_for_RM/TCR-Vison_2022/AutoShoot/TRT/: TRTModule.cpp  TRTModule.h
use_for_RM/TCR-Vison_2022/HaikangCamera/CameraRGB/: HaiKangCameraRGB.cpp  HaiKangCameraRGB.h
use_for_RM/TCR-Vison_2022/HaikangCamera/HaiKangAPIinclude/: MvCameraControl.h  MvErrorDefine.h
use_for_RM/TCR-Vison_2022/Kalman/: Kalman.cpp  Kalman.h
use_for_RM/TCR-Vison_2022/PNP_Distance/: PNP_Distance.cpp  PNP_Distance.h
use_for_RM/TCR-Vison_2022/SerialPort/: SerialPort.cpp  SerialPort.h
use_for_RM/TCR-Vison_2022/Thread/: MyThread.cpp  MyThread.h
use_for_RM/TCR-Vison_2022/carmeraYAML/: camera.yaml
